# philips-icu-news-score-test

./: .gitignore  CMakeLists.txt  README.md  demo.txt  demo2.txt  run_tests.sh  watch_demo.sh
include/: CLI.hpp  Console.hpp  Dashboard.hpp  ICU.hpp  LED.hpp  Models.hpp  News.hpp  Observer.hpp
src/: CLI.cpp  Dashboard.cpp  ICU.cpp  LED.cpp  News.cpp  main.cpp
tests/: CMakeLists.txt  test_e2e.cpp  test_icu.cpp  test_news.cpp
